--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <html ng-app="eg">
   <head>
     <!-- First Load Stylesheets to ensure container sizes are always pre-loaded -->
-    <link rel="shortcut icon" type="image/png" href="images/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="images/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="stylesheets/vendor/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="stylesheets/app/style.css" media="screen" />
     <title>EzGoing | Helping People Go Easy | Hyderabad Metro Rail Connections</title>
