--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,12 @@
     <title>EzGoing | Helping People Go Easy | Hyderabad Metro Rail Connections</title>
   </head>
   <body>
-    <eg-google-maps></eg-google-maps>
+    <div id="canvas">
+      <eg-google-maps></eg-google-maps>
+      <div id="textbox">
+        <eg-textbox></eg-textbox>
+      </div>
+    </div>
 
     <!-- Vendor Libs -->
     <!-- NOTE: Always load jquery before angular if we want jqlite to be replaced by jquery instead -->
@@ -17,12 +22,13 @@
     <script type="text/javascript" src="javascripts/vendor/angular-1.2.21.min.js"></script>
     <script type="text/javascript" src="javascripts/vendor/bootstrap.min.js"></script>
     <script type="text/javascript" src="javascripts/vendor/raphael.js"></script>
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=&sensor=true&extension=.js"></script>
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=&sensor=false&extension=.js"></script>
 
     <!-- App Libs -->
     <script type="text/javascript" src="javascripts/app/directives/spinner.js"></script>
     <script type="text/javascript" src="javascripts/app/directives/loader.js"></script>    
     <script type="text/javascript" src="javascripts/app/directives/eg-navbar.js"></script>    
+    <script type="text/javascript" src="javascripts/app/directives/eg-textbox.js"></script>        
     <script type="text/javascript" src="javascripts/app/directives/eg-prop-modal.js"></script>
     <script type="text/javascript" src="javascripts/app/directives/eg-google-maps.js"></script>
     <script type="text/javascript" src="javascripts/app/factories/eg-data-manager.js"></script>
