Added pick up modal

--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,12 @@
   </head>
   <body>
     <div id="canvas">
-      <eg-google-maps></eg-google-maps>
-      <div id="textbox">
-        <eg-textbox></eg-textbox>
-      </div>
+      <eg-prop-modal>
+        <eg-google-maps></eg-google-maps>
+        <div id="textbox">
+          <eg-textbox></eg-textbox>
+        </div>
+      </eg-prop-modal>
     </div>
 
     <!-- Vendor Libs -->
