--- a/public/admin.html
+++ b/public/admin.html
@@ -28,6 +28,7 @@
     <script type="text/javascript" src="javascripts/app/directives/eg-textbox.js"></script>        
     <script type="text/javascript" src="javascripts/app/directives/eg-prop-modal.js"></script>
     <script type="text/javascript" src="javascripts/app/directives/eg-google-maps.js"></script>
+    <script type="text/javascript" src="javascripts/app/directives/eg-video-chat.js"></script>        
     <script type="text/javascript" src="javascripts/app/factories/eg-data-manager.js"></script>
     <script type="text/javascript" src="javascripts/app/app.js"></script>
     <script type="text/javascript" src="javascripts/app/raphael-eg-extensions.js"></script>
