xirsys stun/turn server test

--- a/public/webrtc.html
+++ b/public/webrtc.html
@@ -20,7 +20,7 @@
     <script type="text/javascript" src="javascripts/vendor/angular-1.2.21.min.js"></script>
     <script type="text/javascript" src="javascripts/vendor/bootstrap.min.js"></script>
     <script type="text/javascript" src="javascripts/vendor/raphael.js"></script>
-    <script type="text/javascript" src="http://simplewebrtc.com/latest.js"></script>
+    <script type="text/javascript" src="javascripts/vendor/simplewebrtc.bundle.js"></script>
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=&sensor=false&extension=.js"></script>
 
     <!-- App Libs -->
